--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -414,23 +414,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 77,
    "id": "f055afeb-35d7-4b51-b1f4-1167c3d85f08",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"# Summary of Edward Donner's Website\\n\\n### About the Author\\nEdward Donner is a writer, developer, and entrepreneur who focuses on applying AI to help people discover their potential. He co-founded Nebula.io, an AI startup that uses LLMs to source, understand, engage, and manage talent.\\n\\n### Recent Announcements\\n* **LLM Workshop – Hands-on with Agents**: Scheduled for January 23, 2025 (news)\\n* **Welcome, SuperDataScientists!**: November 13, 2024 (news)\\n* **Mastering AI and LLM Engineering – Resources**: October 16, 2024 (news)\\n\\n### Blog/Resource Section\\nNo detailed content is available in this section.\\n\\n### Contact Information\\nEmail: [ed at] edwarddonner [dot] com\\nWebsite: www.edwarddonner.com\\nSocial Media:\\n* LinkedIn\\n* Twitter\\n* Facebook\""
+       "'# AiSensy: A Comprehensive WhatsApp Engagement Platform\\n\\nAiSensy is a powerful WhatsApp engagement platform that enables businesses to broadcast and automate messages, run click-to-WhatsApp ads, build chatbots, showcase catalogues, provide multi-agent live chat support, collect payments within WhatsApp, and more.\\n\\n## Features\\n\\n* Powerful messaging categories for promotions, offers, coupon codes, carousels, and more\\n* Click tracking and analytics for campaign performance\\n* Chatbot building with drag-and-drop flow builder\\n* Live chat support with multiple human agents\\n* Real-time analytics for delivered, read rates, and more\\n\\n## Industries\\n\\nAiSensy caters to various industries, including:\\n\\n* Education (Edtech, coaches, institutes)\\n* E-commerce (brands & D2C)\\n* Finance & Insurance (fintech, banking)\\n* Healthcare (appointment booking, hospitals)\\n* Automobile (book test drive, sell faster)\\n* More (see full list on the platform)\\n\\n## Pricing\\n\\nAiSensy offers a free forever plan with zero upfront costs, providing businesses with access to the WhatsApp Business API. The pricing is competitive and depends on the specific plan chosen.\\n\\n## Testimonials\\n\\n\"AiSensy has shown exceptional professionalism, reliability, and commitment to customer satisfaction.\"\\n\\n- Priya Ostwal, Marketing Manager, PhysicsWallah\\n\\n\"AiSensy helped us increase our customer engagement by 55%. Our customer engagement increased from 35% to 90% with AiSensy\\'s Smart Retargeting feature.\"\\n\\n- Akash Jain, Business Executive, Cosco\\n\\n## Key Benefits\\n\\n* Increased customer engagement and sales\\n* Real-time analytics for campaign performance\\n* Multi-agent live chat support\\n* Chatbot building with drag-and-drop flow builder\\n* Click tracking and analytics\\n\\n## Getting Started\\n\\nAiSensy offers a free demo and a free forever plan, making it easy to get started with your WhatsApp marketing journey.'"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "summarize(\"https://edwarddonner.com\")"
+    "summarize(\"https://aisensy.com/\")"
    ]
   },
   {
@@ -447,90 +447,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "6e74e2a0-2d35-4650-a86e-a0b2b74feb2e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: sentence-transformers in c:\\users\\sumit\\anaconda3\\lib\\site-packages (3.4.1)\n",
-      "Requirement already satisfied: transformers<5.0.0,>=4.41.0 in c:\\users\\sumit\\anaconda3\\lib\\site-packages (from sentence-transformers) (4.48.3)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from sentence-transformers) (4.66.6)\n",
-      "Requirement already satisfied: torch>=1.11.0 in c:\\users\\sumit\\anaconda3\\lib\\site-packages (from sentence-transformers) (2.6.0)\n",
-      "Requirement already satisfied: scikit-learn in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from sentence-transformers) (1.5.2)\n",
-      "Requirement already satisfied: scipy in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from sentence-transformers) (1.13.1)\n",
-      "Requirement already satisfied: huggingface-hub>=0.20.0 in c:\\users\\sumit\\anaconda3\\lib\\site-packages (from sentence-transformers) (0.28.1)\n",
-      "Requirement already satisfied: Pillow in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from sentence-transformers) (10.4.0)\n",
-      "Requirement already satisfied: filelock in c:\\users\\sumit\\anaconda3\\lib\\site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (3.13.1)\n",
-      "Requirement already satisfied: fsspec>=2023.5.0 in c:\\users\\sumit\\anaconda3\\lib\\site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (2024.3.1)\n",
-      "Requirement already satisfied: packaging>=20.9 in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (24.1)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\sumit\\anaconda3\\lib\\site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (6.0.1)\n",
-      "Requirement already satisfied: requests in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (2.32.3)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (4.12.2)\n",
-      "Requirement already satisfied: networkx in c:\\users\\sumit\\anaconda3\\lib\\site-packages (from torch>=1.11.0->sentence-transformers) (3.2.1)\n",
-      "Requirement already satisfied: jinja2 in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from torch>=1.11.0->sentence-transformers) (3.1.4)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\sumit\\anaconda3\\lib\\site-packages (from torch>=1.11.0->sentence-transformers) (69.5.1)\n",
-      "Requirement already satisfied: sympy==1.13.1 in c:\\users\\sumit\\anaconda3\\lib\\site-packages (from torch>=1.11.0->sentence-transformers) (1.13.1)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in c:\\users\\sumit\\anaconda3\\lib\\site-packages (from sympy==1.13.1->torch>=1.11.0->sentence-transformers) (1.3.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from tqdm->sentence-transformers) (0.4.6)\n",
-      "Requirement already satisfied: numpy>=1.17 in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (1.26.4)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (2024.9.11)\n",
-      "Requirement already satisfied: tokenizers<0.22,>=0.21 in c:\\users\\sumit\\anaconda3\\lib\\site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (0.21.0)\n",
-      "Requirement already satisfied: safetensors>=0.4.1 in c:\\users\\sumit\\anaconda3\\lib\\site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (0.5.2)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from scikit-learn->sentence-transformers) (1.4.2)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from scikit-learn->sentence-transformers) (3.5.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from jinja2->torch>=1.11.0->sentence-transformers) (3.0.2)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (3.4.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (2.2.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\sumit\\appdata\\roaming\\python\\python312\\site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (2024.8.30)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.3.1 -> 25.0\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 78,
    "id": "b7b58eda-b95f-443e-9ed2-18388735cffb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "# Website Summary: Edward Donner's Home Page\n",
-       "=============================\n",
+       "**AiSensy: A Comprehensive WhatsApp Engagement Platform**\n",
+       "===========================================================\n",
        "\n",
-       "### Overview\n",
+       "**Overview**\n",
+       "------------\n",
        "\n",
-       "The website belongs to Edward Donner, a tech enthusiast and entrepreneur. The homepage is primarily a personal introduction to his work, interests, and projects.\n",
+       "AiSensy is a powerful WhatsApp engagement platform that enables businesses to broadcast and automate messages, run click-to-WhatsApp ads, build chatbots, showcase catalogs, provide multi-agent live chat support, collect payments within WhatsApp, and more.\n",
        "\n",
-       "### Key Points\n",
+       "**Key Features**\n",
+       "---------------\n",
        "\n",
-       "* **LLM Arena (Outsmart)**: A platform that hosts battles between Large Language Models (LLMs) in a diplomacy and cunning contest.\n",
-       "* **About**: Edward's background as co-founder of Nebula.io, an AI company applying AI for talent discovery and management. He is also the founder and CEO of another AI startup (untapt), which was acquired in 2021.\n",
+       "*   Broadcast Promotional Messages (Officially)\n",
+       "*   8+ Powerful Messaging Categories\n",
+       "*   Send Promotions, Offers, Coupon codes, Carousels and More- Risk-Free!\n",
+       "*   Add CTAs. Drive 3x Conversions\n",
+       "*   Schedule your WhatsApp messages\n",
+       "*   Streamline your work, Schedule Broadcasts 2 months ahead of time\n",
        "\n",
-       "### News and Announcements\n",
+       "**Industries**\n",
+       "-------------\n",
        "\n",
-       "* **Upcoming Events**:\n",
-       "\t+ January 23, 2025: LLM Workshop – Hands-on with Agents\n",
-       "\t+ December 21, 2024: Welcome, SuperDataScientists!\n",
-       "\t+ November 13, 2024: Mastering AI and LLM Engineering – Resources\n",
-       "\t+ October 16, 2024: From Software Engineer to AI Data Scientist – resources\n",
+       "AiSensy supports a wide range of industries, including:\n",
        "\n",
-       "Note that news announcements are limited to upcoming events and do not include any current or past updates."
+       "*   Education (Edtech, Coaches, Institutes)\n",
+       "*   E-commerce (Brands and Retailers)\n",
+       "*   Healthcare\n",
+       "*   Finance\n",
+       "*   Travel and Hospitality\n",
+       "\n",
+       "**Benefits**\n",
+       "------------\n",
+       "\n",
+       "*   Increase customer engagement with personalized interactions and instant responses\n",
+       "*   Boost sales with smart retargeting features and multi-agent live chat support\n",
+       "*   Collect payments seamlessly within WhatsApp using WhatsApp Pay and other modes of payment (Razorpay, Payu, etc.)\n",
+       "\n",
+       "**Testimonials**\n",
+       "---------------\n",
+       "\n",
+       "\"AiSensy team has shown exceptional professionalism, reliability and a true commitment to customer satisfaction.\"\n",
+       "\n",
+       "— Priya Ostwal, Marketing Manager, PhysicsWallah\n",
+       "\n",
+       "\" AiSensy helped us increase our customer engagement. Our customer engagement increased from 35% to 90% with AiSensy's Smart Retargeting feature.\"\n",
+       "\n",
+       "— Akash Jain, Business Executive, Cosco\n",
+       "\n",
+       "**Pricing**\n",
+       "------------\n",
+       "\n",
+       "AiSensy offers a **FREE Forever Plan**, providing businesses with free access to the WhatsApp Business API.\n",
+       "\n",
+       "**Getting Started**\n",
+       "------------------\n",
+       "\n",
+       "Sign up for a demo and explore the features of AiSensy's comprehensive WhatsApp engagement platform."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -541,7 +528,7 @@
     }
    ],
    "source": [
-    "display_summary(\"https://edwarddonner.com\")"
+    "display_summary(\"https://aisensy.com/\")"
    ]
   },
   {
@@ -576,14 +563,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "6d12ce74-ad14-48c5-b07a-5b40b045ba22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I don't see a transcript about \"aisensy\" in the provided text. The transcript only discusses Edward Donner's personal blog and its various sections, including LLM Arena and News/Announcements. There is no mention of \"aisensy\".\n",
+      "\n",
+      "If you have any further questions or would like to ask about something else, feel free to ask!\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "transcript = summarize(\"https://edwarddonner.com\")\n",
-    "user_question = \"How is Speaker 2 doing?\"\n",
+    "user_question = \"what does aisensy do?\"\n",
     "\n",
     "answer = transcript_chat_completion_ollama(transcript, user_question, model=\"llama3.2\") # or other model\n",
     "print(answer)\n",
