--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 86,
    "id": "6d12ce74-ad14-48c5-b07a-5b40b045ba22",
    "metadata": {},
    "outputs": [
@@ -571,15 +571,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I don't see a transcript about \"aisensy\" in the provided text. The transcript only discusses Edward Donner's personal blog and its various sections, including LLM Arena and News/Announcements. There is no mention of \"aisensy\".\n",
-      "\n",
-      "If you have any further questions or would like to ask about something else, feel free to ask!\n"
+      "AiSensy is a WhatsApp Engagement Platform that provides businesses with a suite of tools to broadcast and automate messages, run click-to-WhatsApp ads, build chatbots, showcase catalogues, provide multi-agent live chat support, collect payments within WhatsApp, and more. (Source: AiSensy Overview)\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "transcript = summarize(\"https://edwarddonner.com\")\n",
+    "transcript = summarize(\"https://aisensy.com/\")\n",
     "user_question = \"what does aisensy do?\"\n",
     "\n",
     "answer = transcript_chat_completion_ollama(transcript, user_question, model=\"llama3.2\") # or other model\n",
